tests/diagnostics/hashmap_noncopy_value.kal
# HashMap values must be Copy (String is owned, not Copy).
{ let m: HashMap<str, String> = hashmap(); printi(len(m)); };
